--- a/package.json
+++ b/package.json
@@ -8,9 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/area": "^6.0.1",
+    "@turf/bbox": "^6.0.1",
+    "@turf/bbox-polygon": "^6.0.1",
+    "@turf/circle": "^6.0.1",
+    "@turf/helpers": "^6.1.4",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "jquery": "^3.5.0",
+    "number-helper-functions": "^2.0.0",
+    "popper.js": "^1.16.1",
+    "shortid": "^2.2.15",
     "vue": "^2.6.11",
-    "vuex": "^3.1.3"
+    "vue-clipboard2": "^0.3.1",
+    "vue-notification": "^1.3.20",
+    "vue2-transitions": "^0.3.0",
+    "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -18,11 +32,12 @@
     "@vue/cli-plugin-vuex": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^5.4",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-pug": "~1.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
