--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "jquery": "^3.5.0",
+    "math-helper-functions": "^1.1.0",
     "number-helper-functions": "^2.0.0",
     "popper.js": "^1.16.1",
     "shortid": "^2.2.15",
+    "v-dialogs": "^2.1.4",
     "vue": "^2.6.11",
     "vue-clipboard2": "^0.3.1",
     "vue-notification": "^1.3.20",
     "vue2-transitions": "^0.3.0",
     "vuex": "^3.1.3",
-    "vuex-persist": "^2.2.0"
+    "wkt-parser-helper": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
