--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "@turf/area": "^6.0.1",
-    "@turf/bbox": "^6.0.1",
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/circle": "^6.0.1",
-    "@turf/helpers": "^6.1.4",
+    "bbox-helper-functions": "^2.3.1",
     "bootstrap": "^4.4.1",
-    "core-js": "^3.6.4",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.4.4",
     "jquery": "^3.5.0",
     "math-helper-functions": "^1.1.0",
     "number-helper-functions": "^2.0.0",
@@ -26,7 +26,8 @@
     "vue-notification": "^1.3.20",
     "vue2-transitions": "^0.3.0",
     "vuex": "^3.1.3",
-    "wkt-parser-helper": "^2.0.0"
+    "vuex-persist": "^3.1.3",
+    "wkt-parser-helper": "^3.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
@@ -37,8 +38,8 @@
     "eslint": "^5.4",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
+    "node-sass": "^6.0.0",
+    "sass-loader": "10",
     "vue-cli-plugin-pug": "~1.0.7",
     "vue-template-compiler": "^2.6.11"
   },
