--- a/package.json
+++ b/package.json
@@ -3,55 +3,56 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint src"
   },
   "repository": {
     "url": "https://github.com/alrico88/Simple-BBox"
   },
   "dependencies": {
-    "@turf/area": "^6.0.1",
-    "@turf/bbox-polygon": "^6.0.1",
-    "@turf/circle": "^6.0.1",
-    "bbox-helper-functions": "^2.3.1",
-    "bootstrap": "^4.4.1",
+    "@turf/area": "^6.5.0",
+    "@turf/bbox-polygon": "^6.5.0",
+    "@turf/circle": "^6.5.0",
+    "bbox-helper-functions": "^3.0.1",
+    "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.4.4",
+    "core-js": "^3.20.2",
     "jquery": "^3.5.0",
-    "math-helper-functions": "^1.1.0",
-    "number-helper-functions": "^2.0.0",
+    "lodash": "^4.17.21",
+    "math-helper-functions": "^2.1.0",
+    "number-helper-functions": "^4.0.0",
     "popper.js": "^1.16.1",
+    "promise-file-reader": "^1.0.3",
     "shortid": "^2.2.15",
     "v-dialogs": "^2.1.4",
     "vue": "^2.6.11",
-    "vue-clipboard2": "^0.3.1",
+    "vue-clipboard2": "^0.3.3",
     "vue-notification": "^1.3.20",
     "vue2-transitions": "^0.3.0",
     "vuex": "^3.1.3",
     "vuex-persist": "^3.1.3",
-    "wkt-parser-helper": "^3.0.0"
+    "wkt-parser-helper": "^4.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.3.0",
-    "@vue/cli-plugin-eslint": "~4.3.0",
-    "@vue/cli-plugin-vuex": "~4.3.0",
-    "@vue/cli-service": "~4.3.0",
+    "@vue/runtime-dom": "^3.2.26",
     "babel-eslint": "^10.1.0",
     "eslint": "^5.4",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
-    "node-sass": "^6.0.0",
-    "sass-loader": "10",
-    "vue-cli-plugin-pug": "~1.0.7",
-    "vue-template-compiler": "^2.6.11"
+    "pug": "^3.0.2",
+    "sass": "^1.48.0",
+    "vite": "^2.7.12",
+    "vite-plugin-vue2": "^1.9.2",
+    "vue-template-compiler": "^2.6.11",
+    "yorkie": "^2.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
   "lint-staged": {
     "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
+      "eslint src",
       "git add"
     ]
   }
